--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -975,14 +975,46 @@ section {
 /*--------------------------------------------------------------
 # Services
 --------------------------------------------------------------*/
+
+.services #services-flters {
+    padding: 0;
+    margin: 0 auto 15px auto;
+    list-style: none;
+    text-align: center;
+    border-radius: 50px;
+    padding: 2px 15px;
+  }
+
+  .services #services-flters li {
+    cursor: pointer;
+    display: inline-block;
+    padding: 10px 15px 8px 15px;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 1;
+    text-transform: uppercase;
+    color: #444444;
+    margin-bottom: 5px;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .services #services-flters li:hover,
+  .services #services-flters li.filter-active {
+    color: #114070;
+  }
+
+  .services #services-flters li:last-child {
+    margin-right: 0;
+  }
+
 .services .icon-box {
     text-align: center;
     border: 1px solid #e2eefd;
-    padding: 80px 20px;
+    padding: 60px 20px;
     transition: all ease-in-out 0.3s;
     background: #fff;
-    width: 100%;  /* Ensure it takes full width of the column */
-    height: 100%; /* Ensure it takes full height of the column */
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
